@@ -18,6 +18,10 @@
 #' a-posteriori (\code{"EAP"}), Bayes modal (\code{"MAP"}), weighted likelihood estimation
 #' (\code{"WLE"}), maximum likelihood (\code{"ML"}), or expected a-posteriori for sum scores (\code{"EAPsum"})
 #' @param quadpts number of quadratures to use per dimension
+#' @param mean a vector for custom latent variable means. If NULL, the default for 'group' values from the 
+#' computed mirt object will be used
+#' @param cov a custom matrix of the latent variable covariance matrix. If NULL, the default for 'group' values 
+#' from the computed mirt object will be used
 #' @param degrees the degrees argument to be passed to \code{\link{iteminfo}}, only necessary for
 #' multidimensional models when \code{method = 'WLE'}
 #' @param response.vector an optional argument used to calculate the factor scores and standard errors
@@ -38,14 +42,18 @@
 #'
 #' #calculate MAP for a given response vector
 #' fscores(mod, method='MAP', response.vector = c(1,2,3,4))
+#' 
+#' #use custom latent variable properties (diffuse prior for MAP is very close to ML)
+#' fscores(mod, method='MAP', cov = matrix(10))
+#' fscores(mod, method='ML')
 #'   }
 #'
 fscores <- function(object, rotate = '', full.scores = FALSE, method = "EAP",
                     quadpts = NULL, response.vector = NULL, degrees = NULL,
-                    returnER = FALSE, verbose = TRUE)
+                    returnER = FALSE, mean = NULL, cov = NULL, verbose = TRUE)
 {
     ret <- fscores.internal(object=object, rotate=rotate, full.scores=full.scores, method=method,
                             quadpts=quadpts, response.vector=response.vector, degrees=degrees,
-                            verbose=verbose, returnER=returnER)
+                            verbose=verbose, returnER=returnER, gmean=mean, gcov=cov)
     ret
 }
